2013-10-27  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh.c (MSW, LSW): Move and rename macros to...
	* config/sh/sh.h (SH_REG_MSW_OFFSET, SH_REG_LSW_OFFSET): ... here.
	(TARGET_BIG_ENDIAN): New macro.
	* config/sh/sh.md: Use it instead of !TARGET_LITTLE_ENDIAN.
	Use SH_REG_MSW_OFFSET and SH_REG_LSW_OFFSET.
	* config/sh/sh.c: Likewise.
	* config/sh/sh.h: Likewise.

2013-10-27  Hans-Peter Nilsson  <hp@axis.com>

	* config/cris/cris.c (cris_emit_trap_for_misalignment): Replace the
	removed PRED_MUDFLAP with PRED_NORETURN.  Correct file-path in comment.

2013-10-26  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh.md (movmemsi): Remove empty constraints and predicates.
	Fix formatting.
	(cmpstr_t, cmpstrsi): Fix formatting.

2013-10-26  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/52483
	* config/sh/predicates.md (general_movdst_operand): Allow reg+reg
	addressing, do not use general_operand for memory operands.

2013-10-26  Vladimir Makarov  <vmakarov@redhat.com>

	Revert:
	2013-10-25  Vladimir Makarov  <vmakarov@redhat.com>
	* lra-spills.c (lra_final_code_change): Remove useless move insns.

2013-10-26  Jeff Law  <law@redhat.com>

	* predict.c (PRED_MUDFLAP): Remove.
	* targhooks.c (build_va_arg_indirect_ref): Remove mudflap support.

	* Makefile.in (C_COMMON_OBJS): Remove tree-mudflap.
	(OBJS): Remove tree-nomudflap.o
	(GTFILES): Remove tree-mudflap.c
	* builtins.c (expand_builtin_alloc): Remove mudflap support.
	* gcc.c (MFWRAP_SPEC, MFLIB_SPEC): Likewise.
	(mfwrap_spec, mflib_spec): Likewise.
	(cpp_unique_options, cc1_options, static_specs): Likewise.
	* gimplify (gimplify_vla_decl, build_va_arg_indirect_ref): Likewise.
	* passes.def: Likewise.
	* toplev.c (compile_file, process_options): Likewise.
	* tree-inline.c (copy_tree_r): Likewise.
	* tree-pass.,h (make_pass_mudflap_1, make_pass_mudflap_2): Likewise.
	* varasm.c (make_decl_rtl, make_decl_rtl_for_debug): Likewise.
	(build_constant_desc, output_constant_def_contents): Likewise.