@@ -1,3 +1,7 @@
+2013-10-27  Tom de Vries  <tom@codesourcery.com>
+
+	* gcc.target/arm/require-pic-register-loc.c: New test.
+
 2013-10-27  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/58679
