@@ -1,3 +1,8 @@
+2013-10-27  Tom de Vries  <tom@codesourcery.com>
+
+	* cfgexpand.c (gimple_expand_cfg): Remove test for parm_birth_insn.
+	Don't commit insertions after NOTE_INSN_FUNCTION_BEG.
+
 2013-10-27  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	* config/sh/sh.c (MSW, LSW): Move and rename macros to...
